# nexus

./: .dockerignore  .env.example  .gitignore  .rules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  RFC-AWS-Bedrock-Provider.md  docker-compose.yml  nexus.toml  taplo.toml  test.toml  test_cors.sh
crates/config/: CLAUDE.md  Cargo.toml  README.md
crates/config/examples/: nexus.toml
crates/config/src/: client_identification.rs  client_identity.rs  cors.rs  csrf.rs  headers.rs  health.rs  http_types.rs  lib.rs  llm.rs  loader.rs  mcp.rs  oauth.rs  rate_limit.rs  server.rs  telemetry.rs  tls.rs
crates/config/src/telemetry/: exporters.rs  logs.rs  metrics.rs  tracing.rs
crates/integration-test-macros/: Cargo.toml
crates/integration-test-macros/src/: lib.rs
crates/integration-tests/: CLAUDE.md  Cargo.toml  README.md  compose.yaml  generate-certs.sh  generate-test-certs.sh
crates/integration-tests/certs/: cert.pem  key.pem
crates/integration-tests/docker/clickhouse/docker-entrypoint-initdb.d/: init-db.sh
crates/integration-tests/docker/hydra/init/: create-test-clients.sh
crates/integration-tests/docker/otel/: otel-collector-config.yml
crates/integration-tests/docker/redis/tls/: ca.crt  ca.key  client.crt  client.key  generate-certs.sh  server.crt  server.key
crates/integration-tests/mock-mcp-servers/: simple_mcp_server.py
crates/integration-tests/src/: downstream.rs  headers.rs  lib.rs  llms.rs  telemetry.rs  tools.rs
crates/integration-tests/src/llms/: anthropic.rs  bedrock.rs  common.rs  google.rs  openai.rs  provider.rs
crates/integration-tests/src/tools/: header_inspector.rs
crates/integration-tests/test-certs/: cert.pem  key.pem
crates/integration-tests/tests/: integration_tests.rs  mcp_compatibility.rs  nexus.rs  rate_limiting.rs
crates/integration-tests/tests/cors/: mod.rs
crates/integration-tests/tests/csrf/: mod.rs
crates/integration-tests/tests/header_rules/: llm.rs  mcp.rs  mod.rs
crates/integration-tests/tests/llm/: anthropic.rs  bedrock.rs  error_handling.rs  forward_token.rs  google.rs  mod.rs  model_configuration.rs  openai.rs  token_limiting.rs
crates/integration-tests/tests/llm/anthropic/: mod.rs  tools.rs
crates/integration-tests/tests/llm/bedrock/: .live.rs.pending-snap  live.rs
crates/integration-tests/tests/llm/google/: basic.rs  mod.rs  tools.rs
crates/integration-tests/tests/llm/openai/: tools.rs
crates/integration-tests/tests/llm/token_limiting/: edge_cases.rs  group_fallback.rs  redis.rs
crates/integration-tests/tests/mcp_compatibility/: mod.rs
crates/integration-tests/tests/oauth2/: audience_validation.rs  authorization.rs  client_id_cors.rs  edge_cases.rs  error_handling.rs  forwarding.rs  issuer_validation.rs  jwks_caching.rs  mcp.rs  metadata.rs  mod.rs  scope_validation.rs  token_limiting.rs  token_validation.rs
crates/integration-tests/tests/prompts_resources/: mod.rs
crates/integration-tests/tests/rate_limiting/: memory.rs  mod.rs  redis.rs
crates/integration-tests/tests/resilience/: mod.rs
crates/integration-tests/tests/sse/: mod.rs
crates/integration-tests/tests/stdio/: mod.rs
crates/integration-tests/tests/streamable_http/: mod.rs  output_schema.rs
crates/integration-tests/tests/telemetry/: metrics.rs  mod.rs  tracing.rs
crates/integration-tests/tests/telemetry/metrics/: llm.rs  mcp.rs  redis.rs
crates/integration-tests/tests/telemetry/tracing/: mcp.rs
crates/integration-tests/tests/token_auth/: mod.rs
crates/integration-tests/tests/tools/: mod.rs
crates/llm/: CLAUDE.md  Cargo.toml
crates/llm/src/: error.rs  lib.rs  messages.rs  provider.rs  request.rs  server.rs  token_counter.rs
crates/llm/src/provider/: anthropic.rs  bedrock.rs  google.rs  model_manager.rs  openai.rs  token.rs
crates/llm/src/provider/anthropic/: input.rs  output.rs
crates/llm/src/provider/bedrock/: families.rs  input.rs  output.rs
crates/llm/src/provider/bedrock/families/: ai21.rs  amazon.rs
crates/llm/src/provider/bedrock/families/ai21/: input.rs  output.rs
crates/llm/src/provider/bedrock/families/anthropic/: input.rs  output.rs
crates/llm/src/provider/bedrock/families/cohere/: input.rs  output.rs
crates/llm/src/provider/bedrock/families/deepseek/: input.rs  output.rs
crates/llm/src/provider/google/: input.rs  output.rs
crates/llm/src/provider/openai/: input.rs  output.rs
crates/llm/src/server/: builder.rs  handler.rs  metrics.rs  service.rs
crates/llm/src/server/metrics/: stream.rs
crates/llm/src/sse/: mod.rs  parser.rs
crates/mcp/: CLAUDE.md  Cargo.toml  README.md
crates/mcp/src/: cache.rs  config.rs  downstream.rs  index.rs  lib.rs  router_config.rs  server.rs  server_builder.rs  tool.rs
crates/mcp/src/downstream/: client.rs  ids.rs  server.rs
crates/mcp/src/server/: builder.rs  execute.rs  handler.rs  metrics.rs  search.rs  tracing.rs
crates/mcp/src/server/tool/: execute.rs  search.rs
crates/mcp/src/tool/: adder.rs  execute.rs  search.rs
crates/rate-limit/: Cargo.toml
crates/rate-limit/src/: error.rs  lib.rs  manager.rs  request.rs  token.rs
crates/rate-limit/src/storage/: memory.rs  mod.rs  redis.rs  redis_pool.rs
crates/rate-limit/src/storage/redis/: rate_limit.lua  rate_limit_tokens.lua
crates/server/: CLAUDE.md  Cargo.toml  README.md
crates/server/src/: auth.rs  client_id.rs  client_identification.rs  cors.rs  csrf.rs  health.rs  lib.rs  metrics.rs  rate_limit.rs  tracing.rs  well_known.rs
crates/server/src/auth/: claims.rs  error.rs  jwks.rs  jwt.rs
crates/server/src/client_id/: middleware.rs
crates/server/src/client_identification/: middleware.rs
crates/server/src/layer/: auth.rs
crates/server/src/layer/auth/: claims.rs  jwks.rs  jwt.rs
crates/server/src/rate_limit/: mod.rs
crates/telemetry/: CLAUDE.md  Cargo.toml
crates/telemetry/src/: lib.rs  metrics.rs  tracing.rs
crates/telemetry/src/metrics/: names.rs  recorder.rs
examples/hello_service/: Cargo.toml
examples/hello_service/src/: main.rs
helm/: Chart.yaml  (+2 more)
nexus/: Cargo.toml  nexus.toml
nexus/src/: args.rs  logger.rs  main.rs
(+47 files in other folders)
