[workspace]
members = ["crates/*", "nexus"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MPL-2.0"
homepage = "https://grafbase.com"
keywords = ["nexus", "llm", "ai", "mcp"]
repository = "https://github.com/grafbase/nexus"

[workspace.dependencies]
anyhow = "1.0.98"
ascii = "1.1.0"
axum = "0.8.4"
axum-server = { version = "0.7", features = ["tls-rustls"] }
base64 = "0.22.1"
chrono = "0.4.41"
clap = "4.5.41"
config = { path = "crates/config" }
convert_case = "0.8.0"
ctor = "0.4.2"
dashmap = "6.1.0"
duration-str = "0.17"
fast-glob = "1.0.0"
fastrace = "0.7.14"
futures = "0.3.31"
futures-util = "0.3.31"
governor = { version = "0.7", features = ["std", "jitter"] }
http = "1.3.1"
http-body = "1.0.1"
indoc = "2.0.6"
insta = "1.43.1"
itertools = "0.14.0"
jiff = "0.2.13"
jwt-compact = "0.8.0"
log = "0.4.27"
logforth = "0.26.1"
mcp = { version = "0.1.0", path = "crates/mcp" }
mini-moka = "0.10"
regex = "1.11.1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-webpki-roots",
    "charset",
    "http2",
    "macos-system-configuration",
] }
rmcp = "0.3.0"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
schemars = "1.0"
secrecy = "0.10.3"
serde = "1.0.219"
serde-dynamic-string = { git = "https://github.com/grafbase/grafbase" }
serde_json = "1.0"
server = { path = "crates/server" }
sha2 = "0.10"
tantivy = "0.24.2"
temp-env = "0.3.6"
tempfile = "3.14.0"
thiserror = "2.0.12"
tokio = { version = "1.46.1", default-features = false }
tokio-util = "0.7"
toml = "0.9.2"
tower = "0.5.2"
tower-http = "0.6.6"
url = "2.5.4"
uuid = "1.17.0"

[profile.release]
lto = "thin"

[workspace.lints.rust]
nonstandard-style = "deny"
rust-2018-idioms = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
panic = "deny"
