[workspace]
members = ["crates/*", "nexus"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MPL-2.0"
homepage = "https://grafbase.com"
keywords = ["nexus", "llm", "ai", "mcp"]
repository = "https://github.com/grafbase/nexus"

[workspace.dependencies]
anyhow = "1.0.98"
ascii = { version = "1.1.0", features = ["serde"] }
async-trait = "0.1.83"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-credential-types = "1.2"
aws-sdk-bedrockruntime = { version = "1.72", features = ["behavior-version-latest"] }
aws-smithy-runtime-api = "1.7"
aws-smithy-types = "1.2"
axum = { version = "0.8.4", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
base64 = "0.22.1"
clap = "4.5.41"
clickhouse = { version = "0.13", features = ["lz4"] }
config = { path = "crates/config" }
convert_case = "0.8.0"
ctor = "0.5.0"
dashmap = "6.1.0"
deadpool = { version = "0.12", features = ["managed", "rt_tokio_1"] }
duration-str = "0.17"
eventsource-stream = "0.2.3"
fast-glob = "1.0.0"
fastrace = "0.7.14"
futures = "0.3.31"
futures-util = "0.3.31"
governor = { version = "0.10", features = ["std", "jitter"] }
header-rules = { path = "crates/header-rules" }
http = "1.3.1"
http-body = "1.0.1"
indoc = "2.0.6"
insta = "1.43.1"
integration-test-macros = { path = "crates/integration-test-macros" }
itertools = "0.14.0"
jiff = "0.2.13"
jwt-compact = "0.8.0"
llm = { version = "0.1.0", path = "crates/llm" }
log = "0.4.27"
logforth = "0.27.0"
mcp = { version = "0.1.0", path = "crates/mcp" }
mini-moka = "0.10"
opentelemetry = "0.30"
opentelemetry-otlp = { version = "0.30", features = ["metrics", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.30", features = ["metrics", "rt-tokio"] }
proc-macro2 = "1.0"
quote = "1.0"
rate-limit = { version = "0.1.0", path = "crates/rate-limit" }
redis = { version = "0.32.0", features = ["tokio-rustls-comp", "connection-manager"] }
regex = "1.11.1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-webpki-roots",
    "charset",
    "http2",
    "macos-system-configuration",
] }
rmcp = "0.6.0"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
schemars = "1.0"
secrecy = "0.10.3"
serde = "1.0.219"
serde-dynamic-string = { git = "https://github.com/grafbase/grafbase" }
serde_json = "1.0"
server = { path = "crates/server" }
sha2 = "0.10"
sonic-rs = "0.5.3"
tantivy = "0.25.0"
telemetry = { path = "crates/telemetry" }
tempfile = "3.14.0"
thiserror = "2.0.12"
tiktoken-rs = "0.7"
tokio = { version = "1.46.1", default-features = false }
tokio-util = "0.7"
toml = "0.9.2"
tonic = "0.12"
tower = "0.5.2"
tower-http = "0.6.6"
url = "2.5.4"
uuid = "1.17.0"

[profile.release]
lto = "thin"

[workspace.lints.rust]
nonstandard-style = "deny"
rust-2018-idioms = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
panic = "deny"
