[package]
name = "nexus"
version = "0.1.3"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
clap = { workspace = true, features = ["derive", "env"] }
config.workspace = true
jiff.workspace = true
log.workspace = true
logforth = { workspace = true, features = ["append-fastrace", "colored", "diagnostic-fastrace", "layout-json"] }
server.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "tokio-macros"] }

[lints]
workspace = true
