[package]
name = "config"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
ascii = { workspace = true, features = ["serde"] }
duration-str.workspace = true
http.workspace = true
indoc.workspace = true
log.workspace = true
regex.workspace = true
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde-dynamic-string.workspace = true
toml.workspace = true
url = { workspace = true, features = ["serde"] }

[lints]
workspace = true

[dev-dependencies]
insta.workspace = true
toml.workspace = true
