[package]
name = "integration-test-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
# Minimal dependencies for fast compilation
proc-macro2.workspace = true
quote.workspace = true

[lints]
workspace = true
