[package]
name = "integration-test-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
# Dependencies for proc macro with proper span preservation
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full", "parsing"] }

[lints]
workspace = true
