[package]
name = "integration-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true }
axum-server = { workspace = true }
base64.workspace = true
chrono = { workspace = true, features = ["serde"] }
config.workspace = true
ctor.workspace = true
dashmap.workspace = true
eventsource-stream.workspace = true
futures.workspace = true
futures-util.workspace = true
indoc.workspace = true
insta.workspace = true
itertools.workspace = true
log.workspace = true
logforth = { workspace = true, features = ["colored"] }
reqwest = { workspace = true, features = ["json"] }
rmcp = { workspace = true, features = [
    "client",
    "server",
    "macros",
    "reqwest",
    "transport-streamable-http-client",
    "transport-sse-server",
    "transport-sse-client",
] }
rustls.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
server.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
toml.workspace = true
uuid = { workspace = true, features = ["v4"] }

[lints]
workspace = true
