[package]
name = "llm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
config.workspace = true
futures.workspace = true
itertools.workspace = true
log.workspace = true
mini-moka.workspace = true
reqwest = { workspace = true, features = ["json"] }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
