[package]
name = "llm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
config.workspace = true
eventsource-stream.workspace = true
futures.workspace = true
itertools.workspace = true
log.workspace = true
mini-moka.workspace = true
rate-limit.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
secrecy.workspace = true
serde.workspace = true
sonic-rs.workspace = true
thiserror.workspace = true
tiktoken-rs.workspace = true
tokio = { workspace = true, features = ["sync"] }
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
