[package]
name = "mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
axum.workspace = true
config.workspace = true
convert_case.workspace = true
futures-util.workspace = true
http.workspace = true
indoc.workspace = true
itertools.workspace = true
log = { workspace = true, features = ["kv"] }
mini-moka.workspace = true
reqwest.workspace = true
rmcp = { workspace = true, features = [
    "client",
    "reqwest",
    "transport-sse-client",
    "transport-streamable-http-client",
    "transport-streamable-http-server",
    "auth",
    "transport-io",
    "transport-child-process",
    "client-side-sse",

] }
schemars.workspace = true
secrecy.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
tantivy.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["process", "time", "macros"] }
tokio-util.workspace = true

[lints]
workspace = true
