[package]
name = "server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
axum = { workspace = true, features = ["macros", "json", "http2"] }
axum-server.workspace = true
config.workspace = true
fast-glob.workspace = true
http.workspace = true
log = { workspace = true, features = ["kv"] }
mcp = { version = "0.1.0", path = "../mcp" }
serde.workspace = true
tokio = { workspace = true, features = ["signal"] }
tower-http = { workspace = true, features = ["cors"] }
url.workspace = true

[lints]
workspace = true
