[package]
name = "server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
axum = { workspace = true, features = ["macros", "json", "http2"] }
axum-server.workspace = true
config.workspace = true
fast-glob.workspace = true
http.workspace = true
http-body.workspace = true
jwt-compact = { workspace = true, features = ["clock", "rsa", "ed25519-compact", "p256"] }
llm.workspace = true
log = { workspace = true, features = ["kv"] }
mcp.workspace = true
rate-limit.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
telemetry.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["signal"] }
tower.workspace = true
tower-http = { workspace = true, features = ["cors"] }
url.workspace = true

[lints]
workspace = true
