[package]
name = "hello_service"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[[bin]]
name = "hello_service"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["macros", "json", "http2"] }
rmcp = { workspace = true, features = [
    "transport-sse-server",
    "transport-streamable-http-server",
    "client",
    "reqwest",
    "transport-streamable-http-client",
    "auth",
    "transport-io",
] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
